--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gast==0.2.0
 grpcio==1.10.0
 html5lib==0.9999999
 Markdown==2.6.11
+mysqlclient==1.3.12
 numpy==1.14.2
 Pillow==5.0.0
 protobuf==3.5.2.post1
