--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 absl-py==0.1.13
 astor==0.6.2
+astroid==1.6.2
 bleach==1.5.0
 Cython==0.28.1
 Django==2.0.3
+ExifRead==2.1.2
 gast==0.2.0
 grpcio==1.10.0
 html5lib==0.9999999
+isort==4.3.4
+lazy-object-proxy==1.3.1
 Markdown==2.6.11
+mccabe==0.6.1
 mysqlclient==1.3.12
 numpy==1.14.2
 Pillow==5.0.0
+pkg-resources==0.0.0
 protobuf==3.5.2.post1
+pylint==1.8.3
 pytesseract==0.2.0
 pytz==2018.3
 six==1.11.0
@@ -18,3 +25,4 @@ tensorboard==1.6.0
 tensorflow==1.6.0
 termcolor==1.1.0
 Werkzeug==0.14.1
+wrapt==1.10.11
